@@ -4,8 +4,12 @@ package com.projet_bd.carselling.controller;
 import com.projet_bd.carselling.model.Car;
 import com.projet_bd.carselling.model.Photo;
 import com.projet_bd.carselling.model.ResponsePhoto;
+import com.projet_bd.carselling.repository.PhotoRepository;
 import com.projet_bd.carselling.service.CarService;
 import com.projet_bd.carselling.service.PhotoStorageService;
+import jakarta.persistence.UniqueConstraint;
+import org.hibernate.QueryException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -20,18 +24,18 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 //@RequestMapping("api/v1/car")
-/*
+
 @Controller
 @CrossOrigin("*")
 public class CarController {
+    @Autowired
+    private CarService carService;
+    @Autowired
+    private PhotoStorageService storageService;
 
-    private final CarService carService;
-    private final PhotoStorageService storageService;
+    @Autowired
+    private PhotoRepository photoRepository;
 
-    public CarController(CarService carService, PhotoStorageService storageService) {
-        this.carService = carService;
-        this.storageService = storageService;
-    }
 
     @PostMapping(value = "/upload")
     public ResponseEntity<Car> uploadFile(
@@ -64,34 +68,55 @@ public class CarController {
     }
 
     @GetMapping("/cars")
-    public ResponseEntity<List<Car>> getListFiles() {
+    public ResponseEntity<?> getListCars() {
+        try{
         List<Car> cars = carService.findAll();
-        if(cars == null) return ResponseEntity.badRequest().build();
-        List<Car> newCars = new ArrayList<>();
-        AtomicReference<String> flag = new AtomicReference<>("null link");
-        for(Car car:cars){
-            List<ResponsePhoto> files = storageService.getAllFiles().map(dbFile -> {
-                if (dbFile.getCar().equals(car)) {
-                    String fileDownloadUri = ServletUriComponentsBuilder
-                            .fromCurrentContextPath()
-                            .path("/cars/")
-                            .path(dbFile.getId())
-                            .toUriString();
-                    flag.set(fileDownloadUri);
-                }
-                return new ResponsePhoto(
-                        dbFile.getName(),
-                        flag.get(),
-                        dbFile.getType(),
-                        dbFile.getData().length);
-            }).toList();
+        List<ResponsePhoto> responsePhotos = storageService.getAllFiles().map(dbFile -> {
+            String fileDownloadUri = ServletUriComponentsBuilder
+                    .fromCurrentContextPath()
+                    .path("/files/")
+                    .path(dbFile.getId())
+                    .toUriString();
+
+            return new ResponsePhoto(
+                    dbFile.getName(),
+                    fileDownloadUri,
+                    dbFile.getType(),
+                    dbFile.getData().length);
+        }).collect(Collectors.toList());
+
+        List<Photo> photos = photoRepository.findAll();
+        List<Car> carListFinal = new ArrayList<>();
+
+        System.out.print("car LIst ==> ");/*
+        System.out.println(cars.get(0).getName());
+        System.out.print("PHOTO LIST ===> ");
+        System.out.println(responsePhotos.stream().toString());
+        */
+        //init links
+        for(Car car: cars){
             car.setImageLinks(new ArrayList<>());
-            for(ResponsePhoto file : files){
-                car.getImageLinks().add(file.getUrl());
-            }
-            newCars.add(car);
         }
-        return ResponseEntity.status(HttpStatus.OK).body(newCars);
+
+        for(ResponsePhoto responsePhoto: responsePhotos){
+            for(Photo photo: photos){
+                for(Car car: cars){
+                    System.out.println("YOOOO");
+                    if(responsePhoto.getName().equals(photo.getName())){
+                        //System.out.println("hiiiii2");
+                        if(photo.getCar().getId().equals(car.getId())){
+                            //System.out.println("hiiiii3");
+                            car.getImageLinks().add(responsePhoto.getUrl());
+                        }
+                    }
+                    carListFinal.add(car);
+                }
+
+            }
+        }
+        return ResponseEntity.status(HttpStatus.OK).body(cars);}catch ( Exception e){
+            return ResponseEntity.badRequest().body("An error occured, an image name should be unique");
+        }
     }
 /*
         @GetMapping("/files/{id}")
@@ -102,5 +127,5 @@ public class CarController {
                     .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + fileDB.getName() + "\"")
                     .body(fileDB.getData());
         }
-
-}*/
+*/
+}
